<resources>
    <string name="app_name">Groundwork</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_chat">Chat</string>
    <string name="action_map">Map</string>
    <string name="action_stats">Stats</string>
    <string name="action_Fight">Fights</string>
    <string name="title_activity_chat">Chat</string>
    <string name="Blank_String"> </string>
    <string name="STATS">STATS</string>
    <string name="Fight">Fights:</string>
    <string name="STR">STR:</string>
    <string name="END">END:</string>
    <string name="CHR">CHR:</string>
    <string name="INT">INT:</string>
    <string name="AGL">AGL:</string>
    <string name="LCK">LCK:</string>
    <string name="Stat_STR">10</string>
    <string name="Stat_END">20</string>
    <string name="Stat_CHR">35</string>
    <string name="Stat_INT">6</string>
    <string name="Stat_AGL">25</string>
    <string name="Stat_LCK">12</string>
    <string name="title_activity_map">Map</string>
    <string name="Fight1">Fight</string>
    <string name="Attacks">Attacks:</string>
    <string name="SetMove">Set Moves</string>
    <string name="Select">Select</string>
    <string name="LookAt">Details</string>
    <string name="NoFight">No Fights Recorded</string>

    <string name="hello">Welcome to Unconquered</string>
    <string name="u">Email</string>
    <string name="l">Login</string>
    <string name="r">Register</string>
    <string name="p">......</string>

    <string name="currentUser">Welcome %1$ to die!!</string>
    <string name="title_activity_mail_sign_up">MailSignUp</string>

</resources>
