<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.matt.groundwork.MainMenu"
    android:background="#ff9d1000">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_chat"
            android:id="@+id/button"
            android:clickable="true"
            android:onClick="openChat"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#ffe4be02" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_map"
            android:id="@+id/button2"
            android:clickable="true"
            android:onClick="openMap"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#ffe4be02" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_stats"
            android:id="@+id/button3"
            android:clickable="true"
            android:onClick="openStats"
            android:layout_above="@+id/textView20"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="85dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#ffe4be02" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_Fight"
            android:id="@+id/button6"
            android:onClick="openFight"
            android:layout_below="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="81dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#ffe4be02" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:id="@+id/button18"
            android:onClick="logout"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/button3"
            android:layout_alignEnd="@+id/button3"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView20"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


</RelativeLayout>
